--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Team Draft - League of Legends 팀 구성 도구"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/android-chrome-192x192.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
